--- a/_sass/imports/_variations.scss
+++ b/_sass/imports/_variations.scss
@@ -30,7 +30,9 @@
     color: #fff;
   }
 
-  h2#mein-studio 
+  h2#mein-studio {
+      text-decoration: underline;
+  }
 
   .text-block pre,
   .section__bg,
