--- a/_sass/imports/_section.scss
+++ b/_sass/imports/_section.scss
@@ -48,7 +48,7 @@
     hyphens: auto;
   }
 
-  &__body h2#mein-studio {
+  &__body h#mein-studio {
       text-decoration: underline;
   }
   .grid {
