--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,7 +29,7 @@ layout: body
         <header class="post-card__header">
           <h2 class="post-card__title"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
           <div class="post-card__meta">
-            <time class="published" datetime="{{ post.date | date: '%Y-%m-%d %H:%M' }}">{{ post.date | date: '%d. %B %Y' }}{% include date-german.html date=post.date showDay=true %}{{ formattedDate }}</time>
+            <time class="published" datetime="{% include date-german.html date=post.date showDay=true %}{{ formattedDate }}</time>
           </div>
         </header>
         {% assign excerpt_is_not_empty = post.excerpt | is_not_empty %}
