--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -25,7 +25,7 @@
 .container--lg {
   margin-left: 3rem;
   margin-right: 3rem;
-  max-wid
+  max-width: 780px;
   right: auto;
   max-width: $container-md;
 }
