--- a/_sass/imports/_helpers.scss
+++ b/_sass/imports/_helpers.scss
@@ -83,6 +83,10 @@
 
 // Text block
 .text-block {
+  p {
+      hyphens: auto;
+  }
+
   a {
     &:not(.button) {
       border-bottom: 1px solid rgba($color-accent, .4);
