--- a/_sass/imports/_reset.scss
+++ b/_sass/imports/_reset.scss
@@ -105,8 +105,7 @@ textarea {
 
 button,
 input {
-  overflow: visible;    hyphens: auto;
-}
+  overflow: visible;
 }
 
 button,
@@ -190,4 +189,3 @@ template {
 [hidden] {
   display: none;
 }
-
