--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: body
   {% assign image_is_not_empty = page.image | is_not_empty %}
   {% if image_is_not_empty %}
   <div class="post__image">
-    <div class="container container--lg">
+    <div class="">
       <img src="{{ page.image | relative_url }}" alt="{{ page.image_alt }}" />
     </div>
   </div>
