--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -23,7 +23,7 @@
 
 @media only screen and (min-width: 601px) {
   .project {
-    margin-top: 5rem;
+    margin: 5rem;
     
     &__header {
       margin-bottom: 2.5em;
