--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-  padding: 2rem 1.5 1.5rem 1.5;    
+  padding: 2rem 1.5rem 1.5rem 1.5;    
   background: #f0790d;
   position: absolute;
   bottom: 0;
