--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -79,7 +79,8 @@
     }
   }
 
-@media only screen and (max-width: 767px) {      
+@media only screen and (max-width: 767px) {     
+    padding: 2rem 1.5rem 1.5rem 1.5rem;   
       &__info, &__social {
         padding: 0 1.6rem;
       }
