--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -66,6 +66,8 @@
     }
 
   @media only screen and (min-width: 601px) {
+         
+    padding: 2rem 1.5rem 1.5rem 1.5rem;   
     &__inside {
       display: grid;
       grid-template-columns: 1fr 1fr;
