--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -27,8 +27,9 @@
 
     .container, .container--lg {
         margin-left: 0;
-        margin-right: 9
+        margin-right: 0;
         padding-left: 0;
+        padding-right: 0;
     }
   }
 
