--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -47,7 +47,7 @@
 @media only screen and (min-width: 601px) {
   .post {
     margin-top: 5rem;
-    margin-left: 3rem;
+    margin-left: 3vw;
     margin-right: 3rem;
 
     &__header,
