--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -47,8 +47,8 @@
 @media only screen and (min-width: 601px) {
   .post {
     margin-top: 5rem;
-    margin-left: 3vw;
-    margin-right: 3;
+    margin-left: 3rem;
+    margin-right: 3rem;
 
     &__header,
     &__image {
