--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -69,6 +69,7 @@
     &__inside {
       display: grid;
       grid-template-columns: 1fr 1fr;
+      margin-left: 1.5rem;
     }
 
     &__social {
