--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -22,6 +22,9 @@
 }
 
 @media only screen and (min-width: 601px) {
+    nav {
+        margin-top: 3rem;
+    }
   .project {
     margin: 5rem 3rem 0 3rem;
     
