--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -70,6 +70,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       margin-left: 1.5rem;
+      margin-right: 1.5rem;
     }
 
     &__social {
