--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-  padding: 2rem 1.5vw 1.5rem 1.5vw;    
+  padding: 2rem 1.5rem 1.5rem 1.5vw;    
   background: #f0790d;
   position: absolute;
   bottom: 0;
