--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -70,7 +70,8 @@
       grid-template-columns: 1fr 1fr;
       margin-left: 3rem;
       margin-right: 3rem;
-      padding:
+      padding-left: 3vw;
+      padding-right: 3vw;
     }
 
     &__social {
