--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -94,6 +94,9 @@
   }
 
   @media only screen and (min-width: 1105px) {
-      
+        .container--lg {
+      margin: 0 auto;
+      width: 998px
+  }
   }
 }
