--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -83,6 +83,24 @@
     }
   }
 
+    @media only screen and (min-width: 601px) {
+    &__inside {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      margin-left: 4.5rem;
+      margin-right: 4.5rem;
+      padding-left: 3vw;
+      padding-right: 3vw;
+    }
+
+    &__social {
+      a {
+        margin-left: 0;
+        margin-right: 0;
+      }
+    }
+  }
+
   @media only screen and (max-width: 767px) {  
       &__info, &__social {
         padding: 0 1.6rem;
