--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -69,8 +69,8 @@
     &__inside {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      margin-left: 4.5rem;
-      margin-right: 4.5rem;
+      margin-left: 0;
+      margin-right: 0;
       padding-left: 3vw;
       padding-right: 3vw;
     }
