--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -81,6 +81,10 @@
         margin-right: 0;
       }
     }
+
+          &__info, &__social {
+        padding: 0 3rem;
+      }
   }
 
     @media only screen and (min-width: 768px) {
