--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -71,6 +71,8 @@
 @media only screen and (min-width: 767px) {
     .post {
 
-        &__image
+        &__image {
+            
+        }
     }
 }
