--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -102,6 +102,9 @@
   }
 
   @media only screen and (max-width: 767px) {  
+      &__info, &__social {
+        padding: 0 3rem;
+      }
       &__slogan {
         margin-top: 1rem;
       }
