--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -106,7 +106,7 @@
   }
 
   @media only screen and (max-width: 998px) {  
-      &__slogan {
+      .site-footer {
         margin-top: 1rem;
       }
   }  
