--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -107,7 +107,7 @@
 
   @media only screen and (max-width: 998px) {  
       .site-footer {
-        padding: rem;
+        padding: 2rem;
       }
   }  
 
