--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -107,7 +107,8 @@
 
   @media only screen and (max-width: 998px) {  
       .site-footer {
-        padding: 2rem;
+        padding: 2rem 0 1.5rem 0;
+        width: 100%;
       }
   }  
 
