--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -106,16 +106,16 @@
   }
 
   @media only screen and (max-width: 998px) {  
-   
+      .site-footer {
         padding: 2rem 0 1.5rem 0;
         width: 100%;
-   
+      }
   }  
 
   @media only screen and (min-width: 1105px) {
     .container--lg {
       margin: 0 auto;
       width: 998px
-    }
+  }
   }
 }
