--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -67,6 +67,7 @@
 }
 
   @media only screen and (min-width: 601px) {
+      .site-footer
     &__inside {
       display: grid;
       grid-template-columns: 1fr 1fr;
