--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -89,6 +89,7 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .site-footer {
     &__inside {
       margin-left: 3rem;
       margin-right: 3rem;
