--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -112,7 +112,7 @@
   }
 }
 
-@media only screen and (min-width: 601px) and max-width: 998px) {  
+@media only screen and (min-width: 601px) and (max-width: 998px) {  
   .site-footer {
     padding: 2rem 0 1.5rem 0;
     width: 100%;
