--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -17,7 +17,10 @@
   padding: 0 1.5rem 4rem 1.5rem;
 }
 
-
+  .container--lg {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
 
 #main-wrap {
   margin: 0 auto;
