--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -120,6 +120,7 @@
 }  
 
 @media only screen and (min-width: 1105px) {
+    .site-footer {
     .container--lg {
       margin: 0 auto;
       width: 998px
