--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -39,5 +39,6 @@
 }
 
 @media only screen and (max-width: 767px) {
-    max-width: calc(100% + 6vw);
+    img {
+        max-width: calc(100% + 6vw);
 }
