--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -39,7 +39,7 @@
 }
 
 @media only screen and (max-width: 767px) {
-    img {
+    figre img {
         max-width: calc(100% + 6vw);
     }
     }   
