--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -71,7 +71,7 @@
     .post {
         &__image {
             img {
-              max-width: calc(780px - 6vw);
+              max-width: 660px;
             }
         }
     }
