--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -19,7 +19,9 @@
   &__body figure.container, figure.container--lg {
     margin-left: 0;
   }
-  
+  figure img {
+        max-width: calc(100% + 6vw);
+    }
 }
 
 @media only screen and (min-width: 601px) {
