--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -19,7 +19,7 @@
   &__body figure.container, figure.container--lg {
     margin-left: 0;
   }
-  
+
   figure img {
         max-width: 660px;
     }
@@ -43,7 +43,8 @@
 }
 
 @media only screen and (max-width: 948px) {
-  figure img {
+  .project {
+    figure img {
     max-width: calc(100% + 6vw);
   }
 }   
