--- a/_sass/imports/_tables.scss
+++ b/_sass/imports/_tables.scss
@@ -49,7 +49,7 @@ th {
   display: block;
   margin: 1em 0;
   overflow-x: auto;
-  max-width: 100%;
+  max-width: 660px;
 
   &:first-child {
     margin-top: 0;
