--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -104,7 +104,9 @@
   }
 }
 
-@media only screen and (min-width: 998px) 
+@media only screen and (min-width: 998px) {
+    
+}
 
 @media only screen and (max-width: 767px) {  
   .site-footer {
