--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -105,7 +105,9 @@
 }
 
 @media only screen and (min-width: 998px) {
-    
+  .site-footer {
+      
+  }
 }
 
 @media only screen and (max-width: 767px) {  
