--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -106,7 +106,9 @@
 
 @media only screen and (min-width: 998px) {
   .site-footer {
-      &__inside {}
+      &__inside {
+          
+      }
   }
 }
 
