--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -108,6 +108,7 @@
   .site-footer {
       &__inside {
           margin-left: calc(3rem + 3vw);
+          margin-left: calc(3rem + 3vw);
       }
   }
 }
